[package]
name = "kurapika"
version = "0.1.0"
edition = "2021"
authors = ["endruz <endruz@foxmail.com>"]
description = "A software license tool"
repository = "https://github.com/endruz/kurapika"
license = "MIT"

[[bin]]
name = "kr-approver"
path = "crates/approver/src/main.rs"

[[bin]]
name = "kr-checker"
path = "crates/checker/src/main.rs"

[workspace]
members = [
    "crates/kr",
]

[dependencies]
kr = { path = "crates/kr", version = "0.1.0" }
clap = { version = "3.2.17", features = ["derive"] }
rand = "0.8.3"
rust-crypto = "0.2.36"
rsa = "0.6.1"
hex = "0.4.3"
toml = "0.5.9"
serde = { version = "1.0.144", features = ["derive"] }
chrono = "0.4.22"
