[package]
name = "checker"
version = "0.1.0"
edition = "2021"
authors = ["endruz <endruz@foxmail.com>"]
description = ""
repository = "https://github.com/endruz/kurapika/tree/master/crates/checker"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kr = { path = "../kr", version = "0.1.0" }
clap = { version = "3.2.17", features = ["derive"] }
