[package]
name = "kr"
version = "0.1.0"
edition = "2021"
authors = ["endruz <endruz@foxmail.com>"]
description = ""
repository = "https://github.com/endruz/kurapika/tree/master/crates/kr"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rust-crypto = "0.2.36"
rsa = "0.6.1"
hex = "0.4.3"
toml = "0.5.9"
serde = { version = "1.0.144", features = ["derive"] }
chrono = "0.4.22"
